# screen-rs

./: Cargo.toml  README.md
src/: animaition.rs  bar_chart.rs  charts.rs  clock.rs  cus_dashboard.rs  dashboard.rs  generate_charts.rs  layout.rs  main.rs  pie_chart.rs  solar.rs  views.rs
