workspace = { members = ["packages/actix_server", "packages/charts"] }
[package]
name = "rs-screen"
version = "0.1.0"
edition = "2021"
members = ["packages/actix_server", "packages/charts"]

[dependencies]
iced = { version = "0.13.0-dev", features = ["canvas", "debug", "tokio"] }
rand = "0.8.3"
tracing-subscriber = "0.3"

charts = { path = "packages/charts" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
