
[package]
name = "rs-screen"
version = "0.1.0"
edition = "2021"
readme = "README.md"
members = ["packages/actix_server", "packages/charts"]
description = "A cross-platform big data visualization screen"

[dependencies]
iced = { version = "0.13.0-dev", features = [
  "canvas",
  "debug",
  "tokio",
  "image",
] }
rand = "0.8.3"
tracing-subscriber = "0.3"
chrono = "0.4.19"
charts = { path = "packages/charts" }
plotters = "0.3.5"
image = "0.25"
time = { version = "0.3", features = ["local-offset"] }

[workspace.dependencies]
plotters = "0.3.0"
image = "0.25"
plotters-backend = "0.3.5"
num-traits = "0.2"
rand = "0.8"
rand_distr = " 0.4"
rand_xorshift = "0.3"


[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
